--- a/src/translations/fr-FR.po
+++ b/src/translations/fr-FR.po
@@ -3,7 +3,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Language: en-US\n"
+"Language: fr-FR\n"
 
 msgid "APP_NAME"
 msgstr "Starter Kit"
@@ -12,10 +12,10 @@ msgid "Version"
 msgstr "Version"
 
 msgid "Home"
-msgstr "Home"
+msgstr "Accueil"
 
 msgid "About"
-msgstr "About"
+msgstr "A propos"
 
 msgid "Hello world !"
-msgstr "Hello world !"
+msgstr "Bonjour le monde !"
