Updated translation system to use embedded .json files (#3, fix #27)

--- a/docs/i18n.md
+++ b/docs/i18n.md
@@ -1,6 +1,6 @@
 # I18n
 
-The internationalization of the application is managed by [ng2-translate](https://github.com/ocombe/ng2-translate).
+The internationalization of the application is managed by [ngx-translate](https://github.com/ngx-translate/core).
 
 ## Adding translatable strings
 
@@ -29,9 +29,9 @@ translateService.get('My page title').subscribe((res: string) => { title = res; 
 ## Extracting strings to translate
 
 Once you are ready to translate your app, just run `npm translations:extract`.
-It will create a `template.pot` file in the `src/translations` folder.
+It will create a `template.json` file in the `src/translations` folder.
 
-You can then use software like [Poedit](http://www.poedit.net) to generate the `.po` files for each of your supported
-languages, and put them in the `src/translations` folder.
+You can then use any text or code editor to generate the `.json` files for each of your supported languages, and put
+them in the `src/translations` folder.
 
 Do no forget to edit the files in `src/environment` to add the supported languages of your application. 
