Moved the starter kit into a yeoman generator (closes #6)

--- a/generators/app/templates/src/translations/_fr-FR.json
+++ b/generators/app/templates/src/translations/_fr-FR.json
@@ -1,5 +1,5 @@
 {
-  "APP_NAME": "Starter Kit",
+  "APP_NAME": "<%= props.appName %>",
   "Version": "Version",
   "Home": "Accueil",
   "About": "A propos",
