Added authentication workflow (closes #32)

--- a/generators/app/templates/src/translations/_en-US.json
+++ b/generators/app/templates/src/translations/_en-US.json
@@ -3,5 +3,16 @@
   "Version": "Version",
   "Home": "Home",
   "About": "About",
+<% if (props.auth) { -%>
+  "Logged in as": "Logged in as",
+  "Logout": "Logout",
+  "Username": "Username",
+  "Password": "Password",
+  "Username or password incorrect.": "Username or password incorrect.",
+  "Username is required": "Username is required",
+  "Password is required": "Password is required",
+  "Remember me": "Remember me",
+  "Login": "Login",
+<% } -%>
   "Hello world !": "Hello world !"
 }
