--- a/generators/app/templates/src/translations/_fr-FR.json
+++ b/generators/app/templates/src/translations/_fr-FR.json
@@ -3,5 +3,16 @@
   "Version": "Version",
   "Home": "Accueil",
   "About": "A propos",
+<% if (props.auth) { -%>
+  "Logged in as": "Connecté en tant que",
+  "Logout": "Déconnexion",
+  "Username": "Identifiant",
+  "Password": "Mot de passe",
+  "Username or password incorrect.": "Identifiant ou mot de passe incorrect.",
+  "Username is required": "Identifiant requis",
+  "Password is required": "Mot de passe requis",
+  "Remember me": "Rester connecté",
+  "Login": "Connexion",
+<% } -%>
   "Hello world !": "Bonjour le monde !"
 }
