--- a/generators/app/templates/src/translations/_fr-FR.json
+++ b/generators/app/templates/src/translations/_fr-FR.json
@@ -3,14 +3,14 @@
   "About": "A propos",
   "Hello world !": "Bonjour le monde !",
   "Home": "Accueil",
-<% if (props.ui.ionic) { -%>
+<% if (props.ui === 'ionic') { -%>
   "Cancel": "Annuler",
   "Change language": "Changer la langue",
   "Language": "Langue",
   "Ok": "Ok",
 <% } -%>
 <% if (props.auth) { -%>
-  <% if (props.ui.bootstrap) { -%>
+  <% if (props.ui === 'bootstrap') { -%>
   "Logged in as": "Connecté en tant que",
   <% } -%>
   "Login": "Connexion",
