--- a/generators/app/templates/src/translations/_fr-FR.json
+++ b/generators/app/templates/src/translations/_fr-FR.json
@@ -10,7 +10,7 @@
   "Ok": "Ok",
 <% } -%>
 <% if (props.auth) { -%>
-<%   if (props.ui === 'bootstrap') { -%>
+<%   if (props.ui !== 'ionic') { -%>
   "Logged in as": "Connecté en tant que",
 <%   } -%>
   "Login": "Connexion",
