--- a/generators/app/templates/src/translations/_fr-FR.json
+++ b/generators/app/templates/src/translations/_fr-FR.json
@@ -3,11 +3,20 @@
   "About": "A propos",
   "Hello world !": "Bonjour le monde !",
   "Home": "Accueil",
-<% if (props.ui === 'ionic') { -%>
+  <% if (props.ui === 'ionic') { -%>
   "Cancel": "Annuler",
   "Change language": "Changer la langue",
   "Language": "Langue",
   "Ok": "Ok",
+  <%   if (props.layout === 'tabs') { -%>
+  "Settings": "Paramètres",
+  "Notifications": "Notifications",
+  "Preferences": "Préférences",
+  "Account": "Mon compte",
+  <%     if (props.auth) { -%>
+  "Profile": "Profil",
+  <%     } -%>
+<%    } -%>
 <% } -%>
 <% if (props.auth) { -%>
 <%   if (props.ui !== 'ionic') { -%>
