--- a/generators/app/templates/src/translations/__zh-CN._zh-CN.json
+++ b/generators/app/templates/src/translations/__zh-CN._zh-CN.json
@@ -8,6 +8,15 @@
   "Cancel": "取消",
   "Language": "语言",
   "Ok": "确定",
+<%   if (props.layout === 'tabs') { -%>
+  "Settings": "设置",
+  "Notifications": "通知",
+  "Preferences": "首选项",
+  "Account": "帐号",
+<%     if (props.auth) { -%>
+  "Profile": "个人简历",
+<%     } -%>
+<%   } -%>
 <% } -%>
 <% if (props.auth) { -%>
 <%   if (props.ui !== 'ionic') { -%>
