* typo of language

--- a/generators/app/templates/docs/i18n.md
+++ b/generators/app/templates/docs/i18n.md
@@ -6,7 +6,7 @@ The internationalization of the application is managed by [ngx-translate](https:
 
 * `translations/[lang].json`: the string to translate here.
 * `app/@i18n/i18n.service.ts`: load the language here.
-* `app/@i18n/i18n-locales.ts`: add the new lanague name here.
+* `app/@i18n/i18n-locales.ts`: add the new language name here.
 * `environments/environment[.prod].ts`: supported-languages
 
 ## Adding translatable strings
