--- a/generators/app/templates/src/translations/__it-IT._it-IT.json
+++ b/generators/app/templates/src/translations/__it-IT._it-IT.json
@@ -1,6 +1,6 @@
 {
   "APP_NAME": "<%= props.appName %>",
-  "About": "About",
+  "About": "Informazioni",
   "Hello world !": "Ciao Mondo !",
   "Home": "Inizio",
 <% if (props.ui === 'ionic') { -%>
